# marketdata

./: .gitignore  README.md  pyproject.toml
marketdata/: cli.py
marketdata_cli/: cli.py  yfinancedata.py
tests/: test_marketdata_cli.py
