[tool.poetry]
name = "marketdata"
version = "0.1.0"
description = "simple tools to get market data"
authors = ["r0nny8000"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "3.7.*"
fire = "^0.4.0"
yfinance = "^0.1.55"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
